Fix display bug on IE
Fix display bug on IE

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
+    align-items: center;
 }
 
 .modal-content {
